# paralelos

Ch4_Pthreads/: busyWaiting.c  linkedlistMutPerList.c  linkedlistMutPerNode.c  linkedlistReadWriteLock.c  mutex.c  parallelMatrixVector.c
ListExe/: 4-4ans.txt  ej1.cpp  ej2.cpp  ej3.cpp  ej5.h  file0.in  file2.in
MatrixVector/: CMakeLists.txt  main.cpp
OMP/: ompMatrixVector.c  ompOddEvenSort1.c  ompOddEvenSort2.c
OddEven/: main.cpp
Paralelos/: CMakeLists.txt  Matrix.h  a.out  main.cpp  runbash.sh
